--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-
-body {
+.cabecalho{
     background-color:#293892;
     color: white;
+    display: flex;
+    justify-content: space-around;
+}
+
+.cabecalho-imagem{
+     width: 20%;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
 }
