--- a/style.css
+++ b/style.css
@@ -6,9 +6,17 @@
 }
 
 .cabecalho-imagem{
-     width: 20%;
+     width: 10%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
+    margin: 0 16px;
+    padding: 24px 0;
+    font-size: 24px;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
