--- a/style.css
+++ b/style.css
@@ -17,15 +17,29 @@
 }
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0 16px;
+    padding: 24px 0;
 }
 
 .imagem-escola {
-    width: 20%;
+    width: 25%;
 }
 
 .escola {
     background-image: linear-gradient(#293892,#296671);
     color:white;
+    display: flex;
+    justify-content: center;
 }
+
+
+.escola-conteudo {
+    width: 35%;
+    align-items: center;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
+
