--- a/style.css
+++ b/style.css
@@ -42,4 +42,14 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.escola-titulo {
+    padding: 30px 0;
+}
+
+.estudante-icone {
+
+    width: 24px;
+
+}
+
 
