--- a/style.css
+++ b/style.css
@@ -52,4 +52,19 @@ body {
 
 }
 
+.ciencia-todos{
+
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+    justify-content: center;
+
+}
+
+.estudante {
+    text-align: center;
+}
+
+.estudante-imagem{
+    width: 30%;
+}
 
