--- a/style.css
+++ b/style.css
@@ -46,25 +46,27 @@ body {
     padding: 30px 0;
 }
 
+.estudante-titulo{
+    text-align: center;
+    padding: 24px 0;
+}
+
 .estudante-icone {
-
-    width: 24px;
-
+    width: 58px;
+    padding: 4px 8px;
 }
 
 .ciencia-todos{
-
     display: grid;
     grid-template-columns: 20% 20% 20% 20%;
     justify-content: center;
 
 }
 
-.estudante {
+.estudante-div{
     text-align: center;
 }
 
-.estudante-imagem{
-    width: 30%;
+.estudante-imagem {
+    width: 358px;
 }
-
